added function in notifications to get all notifications for a given coach/customer
